language/move-lang/tests/move_check/parser/let_binding_trailing_comma.exp
error: 

   ┌── tests/move_check/parser/let_binding_trailing_comma.move:3:21 ───
   │
 3 │         let (x1, x2,) = (1, 2);
   │                     ^ Unexpected token: ')'
   ·
 3 │         let (x1, x2,) = (1, 2);
   │                     - Expected: '[Name]', '[Name<Types>]', '[Address]'
   │

